--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <h1>
   {{title}}
 </h1>
+  <div>
+    {{clock | async | date:'yMMMdjms'}}
+    <button (click)="click$.next()">Update</button>
+  </div>
+  <app-counter></app-counter>
