--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,17 @@
 <h1>
   {{title}}
 </h1>
-  <div>
-    <input #input type="number" value="0">
-    {{clock | async | date:'yMMMdjms'}}
-    <button (click)="click$.next(input.value)">Update</button>
-  </div>
+<div>
+  <input #input type="number" value="0">
+  <!--{{clock | async | date:'yMMMdjms'}}-->
+  <clock [time]=" time | async"></clock>
+  <button (click)="click$.next(input.value)">Update</button>
+</div>
+<div (click)="person$.next(p)" *ngFor="let p of people | async">
+  {{ p.name }} is in {{ p.time | date: 'jms'}}
+</div>
+<button (click)="recall$.next()">Recall</button>
+
+<div>
   <app-counter></app-counter>
+</div>
